loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:2: error: illegal start of simple pattern
  var=nbB=0
     ^Poucet1:3: error: '=' expected but ';' found.
  for(x<-1 ti 5){avance()
^